[package]
name = "ssb"
version = "0.0.0"
license = "ISC"
authors = ["Thomas Scholtes <lambdaque@gmail.com>"]
edition = "2018"

[dependencies]
async-std = "1.3"
futures = "0.3"
libsodium-sys = "*"
sodiumoxide = "0.2.5"
thiserror = "1.0"

[dev-dependencies]
async-std = { version = "1.3", features = ["attributes" ] }
async-pipe = { version = "0.1.3", features = ["futures"] }
duplexify = "1.0"

[patch.crates-io.async-pipe]
git = "https://github.com/geigerzaehler/async-pipe-rs"
rev = "74c0e25d874d8499be4814b1c96389f578c7c838"
