[package]
name = "ssb"
version = "0.0.0"
license = "ISC"
authors = ["Thomas Scholtes <lambdaque@gmail.com>"]
edition = "2018"

[dependencies]
async-std = "1.3"
base64 = "0.12"
dirs = "3.0"
bytes = "0.5"
futures = "0.3"
libsodium-sys = "0.2.5"
pin-project = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sodiumoxide = "0.2.5"
thiserror = "1.0"

[dev-dependencies]
async-pipe = { version = "0.1.3", features = ["futures"] }
async-std = { version = "1.3", features = ["attributes" ] }
duplexify = "1.0"
proptest = "0.10"

[patch.crates-io.async-pipe]
git = "https://github.com/geigerzaehler/async-pipe-rs"
rev = "2181aa8800fc3d64d28a238c071d980333ea40c8"
