[package]
name = "muxrpc"
version = "0.2.0"
authors = ["Thomas Scholtes <lambdaqu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1"
futures = "0.3"
pin-project = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
tracing = "0.1"
# TODO make optional
async-std = { version = "1.6", features = ["unstable", "attributes"] }

[dev-dependencies]
tracing-subscriber = "0.2"
proptest = "0.10"
proptest-derive = "0.2"
test-strategy = "0.1"
