[package]
name = "muxrpc"
version = "0.2.0"
authors = ["Thomas Scholtes <lambdaqu@gmail.com>"]
edition = "2018"
description = "RPC protocol with support for streams used by Scuttlebutt"
license = "ISC"
readme = "README.md"
keywords = ["ssb", "scuttlebutt", "muxrpc", "rpc"]
repository = "https://github.com/geigerzaehler/rust-ssb"
homepage = "https://github.com/geigerzaehler/rust-ssb/tree/main/muxrpc"

[features]
default = []
test-server = ["futures_codec"]

[[example]]
name = "test_server"
required-features = ["test-server"]

[dependencies]
anyhow = "1.0"
async-std = { version = "1.6", features = ["attributes"] }
bytes = "1"
chashmap = "2"
futures = "0.3"
pin-project = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1"
tracing = "0.1"

futures_codec = { optional = true, version =  "0.4" }

[dev-dependencies]
assert_cmd = "1.0.1"
futures_codec = "0.4"
proptest = "0.10"
proptest-derive = "0.2"
test-strategy = "0.1"
tracing-subscriber = "0.2"
