[package]
name = "ssb-box-stream"
version = "0.2.0"
authors = ["Thomas Scholtes <lambdaqu@gmail.com>"]
edition = "2018"
description = "Implemenation of Scuttlebuts authentication and encryption protocol for peer connections"
license = "ISC"
readme = "README.md"
keywords = ["ssb", "scuttlebutt", "encryption", "box-stream", "handshake"]
categories = ["cryptography", "authentication", "network-programming"]
repository = "https://github.com/geigerzaehler/rust-ssb"
homepage = "https://github.com/geigerzaehler/rust-ssb/tree/main/ssb-box-stream"

[dependencies]
bytes = "1"
futures = "0.3"
libsodium-sys = "0.2.5"
pin-project = "1"
sodiumoxide = "0.2.5"
thiserror = "1"

[dev-dependencies]
async-std = { version = "1.6", features = ["unstable", "attributes"] }
duplexify = "1.1"
proptest = "0.10"
proptest-derive = "0.2"
test-strategy = "0.1"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
