[package]
name = "ssb"
version = "0.0.0"
license = "ISC"
authors = ["Thomas Scholtes <lambdaque@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-std = { version = "1.6", features = ["unstable", "attributes"] }
async-trait = "0.1"
base64 = "0.13"
bytes = "1"
chashmap = "2.0"
dirs = "3.0"
futures = "0.3"
futures_codec = "0.4"
libsodium-sys = "0.2.5"
never = "0.1"
nix = "0.19"
peg = "0.6.3"
pin-project = "1"
prettytable-rs = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
socket2 = "0.3.12"
sodiumoxide = "0.2.5"
muxrpc = { path = "../muxrpc" }
ssb-box-stream = { path = "../ssb-box-stream" }
structopt = "0.3"
thiserror = "1.0.7"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.2"

[dev-dependencies]
assert_cmd = "1.0.1"
duplexify = "1.1"
goldenfile = "1.1"
proptest = "0.10"
proptest-derive = "0.2"
test-strategy = "0.1"
